remove java8 warnings